# finance-recon-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 23d2b3f6346e_add_ingestion_telemetry.py  269e9991d46d_add_reconciliation_fields.py  45e125995a0b_initial_migration.py  5651daa2d9d6_make_transaction_date_nullable.py  99e827f68f11_add_original_filename.py  b90319ba66c9_add_token_tracking_columns.py  bf29f0ad0c0f_add_brl_cost_tracking.py  c602e630e87b_add_file_hash.py  cd3d53e65ae0_add_tax_persistence_fields.py  cfb6ad884599_add_taxanalysis_table.py
backend/app/: main.py
backend/app/api/endpoints/: reconciliation.py  tax.py  tax_analysis.py
backend/app/core/: config.py  llm_factory.py
backend/app/core/tax_engine/: ingest.py
backend/app/db/: models.py
backend/app/schemas/: document.py  tax.py
backend/app/services/: extractor.py  processor.py  reconciler.py  tax_agent.py
backend/app/services/parsers/: danfe.py  factory.py  generic.py
backend/exports/: tax_report_11_2025_8247cb18.csv
backend/scripts/: audit_ingestion.py  check_db_last.py  check_gemini_models.py  generate_tax_report.py  patch_schema_v2.py  reset_db.py  seed.py  test_integration_installment_tax.py  test_tax_warmup.py  validate_gemini_cost.py
backend/tests/: test_tax_agent.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ReconWorkbench.tsx  TaxAnalysisPanel.tsx  TaxReportDownload.tsx  UploadZone.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: History.tsx
