[tool.poetry]
name = "finance-recon-ai-backend"
version = "0.1.0"
description = "Backend for Finance Recon AI"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-core = "^0.3.0"
langchain-ollama = "^0.2.0"
langgraph = "^0.2.50"
ollama = "^0.3.0"
pandas = "^2.2.1"
pdfplumber = "^0.10.4"
pypdf = "^4.0.0"
aiofiles = "^23.2.0"
thefuzz = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
